# Geometry3D

./: CMakeLists.txt  Demo.cpp  README.md
include/: BasicElements.h  Geometry3D.h  Shape3D.h  Vector3D.h
src/: BasicElements.cpp  Geometry3D.cpp  Shape3D.cpp  Vector3D.cpp
